--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
          "express": "4.14.0",   
          "ejs": "2.5.2", 
          "express-session": "1.14.1", 
-         "method-override": "2.3.6",    
+         "method-override": "2.3.6",  
+         "mongoose": "4.6.5",   
          "morgan": "1.7.0" 
     } 
 }
